css/spec.css
nav li:nth-child(2) { font-weight: 600; }

#spec-summary a {
	font-weight: 500;
	text-decoration: underline;
}
#spec-summary a:visited { color: black; }

/* -- Specification banner image -- */
#spec-banner {
	padding: 0;
/*	margin-bottom: 20px;*/
}
#double-image-cont {
	margin: 15px 0;

	/*Flex-cont: wrap, justify space-around, stretch*/
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
	-webkit-box-lines: multiple;
	-moz-box-lines: multiple;

	justify-content: space-around;
	-webkit-box-pack: justify;
    -moz-box-pack: justify;
    -webkit-justify-content: space-around;
    -ms-flex-pack: distribute;

    align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: stretch;
    -webkit-box-align: stretch;
    -moz-box-align: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
}
.wireframe-img-cont {
	background: white;
	margin-top: 5px;
	border: 2px solid rgba(130,130,130, 0.5);

	max-width: 45%;
	min-width: 500px;

	/*Flex-cont: align items-center */
	display: flex;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;

    flex-direction: row;
    -webkit-box-direction: normal;
    -moz-box-direction: normal;
    -webkit-box-orient: horizontal;
    -moz-box-orient: horizontal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;

    flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
	-webkit-box-lines: single;
	-moz-box-lines: single;

    justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;

	align-content: stretch;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;

    align-items: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
	
	/* Flex-item: flex: 1 0 700px */
	flex: 1 0 700px;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1 0 700px;
    -ms-flex: 1 0 700px;
	
	align-self: auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
	
	order: 0;
	-webkit-box-ordinal-group: 1;
    -moz-box-ordinal-group: 1;
    -webkit-order: 0;
    -ms-flex-order: 0;
}

.wireframe-img-cont img {
	width: 100%;
}

@media screen and (max-width: 700px) {
	#double-image-cont {
		margin: 0px;
		
		flex-direction: column;
		-webkit-box-orient: vertical;
		-moz-box-orient: vertical;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;

		align-items: center;
		-webkit-box-align: center;
		-moz-box-align: center;
		-webkit-align-items: center;
		-ms-flex-align: center;
	}
	.wireframe-img-cont {
		min-width: 85%;
		flex: 0 1 auto;
		-webkit-box-flex: 0;
		-moz-box-flex: 0;
		-webkit-flex: 0 1 auto;
		-ms-flex: 0 1 auto;
	}
}

@media screen and (max-width: 300px) {
	.wireframe-img-cont { min-width: 95%; }
}

@media screen and (min-width: 1270px) {
	.section, footer, #home, #collapsable-menu {
		max-width: 1270px;
		margin: 0 auto;
	}
	.banner-cont { background: white; }
	#front-text-cont {
		position: relative;
		top: -300px;
	}
}


/* -- Table formatting -- */
#spec-rightpanel {
	justify-content: space-around;
	-webkit-box-pack: justify;
    -moz-box-pack: justify;
    -webkit-justify-content: space-around;
    -ms-flex-pack: distribute;
}
.table-cont {
	/*	box-shadow: 1px 4px 1px #eee;*/
	padding: 0;
	margin-bottom: 20px;
	margin-right: 25px;
	width: 300px;
	border: 1px solid rgb(150,150,150);
}
.table-cont table, .table-cont th, .table-cont td, .table-cont p {
	border-collapse: collapse;
}
.table-cont table {
	height: 100%;
}
.table-cont ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
table li {
	color: black;
	padding-bottom: 8px;
}
.table-cont th {
	padding-left: 10px;
	padding-bottom: 3px;
	height: 34px;
	border-bottom: 0.5px solid black;
	text-align: left;
}
.table-cont td {
	vertical-align: top;
	padding-bottom: 7px;
}
.table-cont tr td:nth-child(1) {
	padding-left: 5px;
	padding-top: 3px;
	width: 110px;
}
.table-cont tr td:nth-child(2) {
	padding-left: 7px;
	padding-top: 3px;
}
.table-cont tr:nth-child(1) {
	background: rgba(230,230,230,0.5);
}
/*
.table-cont tr:nth-child(2n+1) {
	background: rgba(230,230,230,0.5);
}
*/

/* -- Sweep section -- */

#sweep div.section-rightpanel img {
	max-width: 95%;
}

/* -- Processing section -- */
#processing-overview ul {
	margin: 0;
	
	/*Flex-item: 1 1 600px*/
	flex: 1 1 600px;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1 1 600px;
    -ms-flex: 1 1 600px;
	
	align-self: auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
}
#processing-overview li {
	padding: 5px;
	text-indent: 4px;
}
/* -- PDF section -- */
.section:last-of-type div {
	justify-content: flex-start;
    -webkit-box-pack: start;
    -moz-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
}
#spec-pdf {
	text-decoration: underline;
}

